Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Ad-screen-service by com-localad</title>
+    <title>Ad Screen Service by com-localad</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Ad-screen-service</h1>
+        <h1>Ad Screen Service</h1>
         <p>互联网广告屏的后端服务</p>
 
         <p class="view"><a href="https://github.com/com-localad/ad-screen-service">View the Project on GitHub <small>com-localad/ad-screen-service</small></a></p>
